automatically merged revision 855521: Consider the real root background box when computing some background properties - not the one that is extended on the whole canvas.

Patch based on work by Anatoli Papirovski <apapirovski mac dot com>

BUG: 169608

svn path=/branches/KDE/4.1/kdelibs/; revision=855524